Add: python3 xmlrpc client

--- a/tool/supervisor/conf/supervisord.conf
+++ b/tool/supervisor/conf/supervisord.conf
@@ -6,7 +6,7 @@ file=/tmp/gosupervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
 
 [inet_http_server]
-port=192.168.11.100:19001
+port=192.168.11.110:19001
 
 [supervisord]
 logfile=/home/vagrant/test/supervisor/log/gosupervisord.log ; (main log file;default $CWD/supervisord.log)
@@ -15,6 +15,7 @@ childlogdir=/home/vagrant/test/supervisor/log/childlog ; (‘AUTO’ child log d
 processinfomapfile=/home/vagrant/test/supervisor/process/supervisor_ps_info_map.yaml
 startkillall=false
 exitkillall=false
+daemon=true
 
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
