--- a/tool/supervisor/supervisor.d/udp_test1.conf
+++ b/tool/supervisor/supervisor.d/udp_test1.conf
@@ -1,11 +1,12 @@
 [program:udp_test1]
-command = python /home/vagrant/test/supervisor/test/udp_test1.py
-directory = /home/vagrant/test/supervisor/test
+command = python /test/udp_test1.py
+; directory = /home/vagrant/test/supervisor/test
+directory = /home/vagrant/test/supervisor/
 autostart = true
 autorestart = true
 startsecs = 3
 startretries = 10
-stdout_logfile = /home/vagrant/test/supervisor/test/udp_test1.stdout.log
-stderr_logfile = /home/vagrant/test/supervisor/test/udp_test1.stderr.log
+stdout_logfile = /home/vagrant/test/supervisor/log/udp_test1.stdout.log
+stderr_logfile = /home/vagrant/test/supervisor/log/udp_test1.stderr.log
 environment = LD_LIBRARY_PATH=".:$LD_LIBRARY_PATH"
 
